--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,4 +1,2 @@
-PORT=4000
-MONGO_URI=mongodb+srv://bunnyinfy:bunnyinfy@cluster0.xekcosd.mongodb.net/?retryWrites=true
-
-FRONTEND_URL = http://localhost:5173
+//  mongodb_url and the port number
+// Author - Bunny
